--- a/app.css
+++ b/app.css
@@ -241,10 +241,14 @@ font-size: 1.2rem;
     opacity: 0.3;
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 768px){
 .wrapper{
     display: block;
 }
+    
+.form_layout{
+    width: 70%;
+    }
 }
 
 #map{
